# esg-quicksight-as-code

./: .env.example  .gitignore  COPIE.xlsx  LICENSE  README.md  README_zh.md  dashboard_definition.json  dashboard_preview.html  dashoard10_dashboard.html  dashoard10_dashboard.json  demo_cross_asset_type_2025-03-31_ORIGINAL.xlsx  generate_dashboard.ipynb  generate_dashboard.py  permission_check.ipynb  pyproject.toml  qs_perm_test.py  requirements.txt  sheets_esg.py  test_analysis.py  test_boto3.ipynb  test_dashboard.ipynb  visualiser_excel_portfolio.ipynb
ESG_dataset/: dashboard_preview.html  esg_analysis.json  generate_dashboard.ipynb  preview_local.ipynb  sheets_esg.py
General_dataset/: generate_dashboard.ipynb  sheets_esg.py
data/: Cleaning_esg  Untitled4.ipynb  clean_esg.csv
docs/: Documentation_ESG_advanced_visuals.md  Documentation_ESG_parameters.txt  boto3_summary.txt  dashboard_preview.html  dashboard_preview_pro.html  data_quality_report.md  esg_dashboard_output.json  esg_dashboard_preview.html  parameters_summary.txt  portfolio_dashboard_output.json  portfolio_dashboard_preview.html  preview_theme.css  quicksight_column_mapping.md  sheets.md  validation_matrix.md  visuals_basic.md  visuals_summary.txt
esg_lib/: analysis_api.py  column_mapping.py  dashboard_renderer.py  dataset_registry.py  dataset_switch.py  filters.py  kpis.py  parameters_controls.py  parameters_esg.py  portfolio_inventory_mapping.py  sheets.py  visuals_advanced.py  visuals_basic.py
examples/: basic_dashboard.py  deploy_to_aws.py  esg_dashboard.py
notebooks/: preview_from_json.ipynb  (+3 more)
(+97 files in other folders)
