[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quicksight-codegen"
version = "0.1.0"
description = "A Python library for generating Amazon QuickSight dashboards as code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ESG QuickSight Team" }
]
keywords = ["quicksight", "aws", "dashboard", "bi", "analytics", "codegen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.26.0"]
auto = ["pandas>=1.5.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/quicksight-codegen"
Documentation = "https://github.com/your-org/quicksight-codegen#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/quicksight_codegen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
